--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,9 @@ Thumbs.db
 /vendor
 
 #logs
-log.txt
-info-log.txt
-work-log.txt
+log.txt*
+info-log.txt*
+work-log.txt*
 
 #sublime
 *.sublime-project
