--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,7 @@ Options +FollowSymLinks
 IndexIgnore */*
 RewriteEngine on
 RewriteRule ^git-pull$ /cgi/git-pull.cgi [L] 
+RewriteRule ^git-pull-hard$ /cgi/git-pull-hard.cgi [L] 
 RewriteCond %{REQUEST_URI} !^/(web)
 RewriteRule ^assets/(.*)$ /web/assets/$1 [L]
 RewriteRule ^css/(.*)$ web/css/$1 [L]
